|
Quick Lists
|
|
Bug ID:
|
6625997
|
|
Votes
|
0
|
|
Synopsis
|
CastPP, CheckCastPP and Proj nodes are not dead loop safe
|
|
Category
|
hotspot:compiler2
|
|
Reported Against
|
|
|
Release Fixed
|
hs13(b01)
|
|
State
|
10-Fix Delivered,
bug
|
|
Priority:
|
4-Low
|
|
Related Bugs
|
|
|
Submit Date
|
05-NOV-2007
|
|
Description
|
CastPP, CheckCastPP and Proj nodes are not "dead" loop safe after
the putback 20061023120554.jrose.dolphin-cleanups which added
new mmethods Ideal_allocation(), Ideal_klass(), Ideal_length().
These methods could bypass the nodes chain to get a klass or
an array's length from inputs of Allocation node:
Allocate <- Proj <- CheckCastPP.
As result dead data loop could be created.
Posted Date : 2007-11-05 18:08:24.0
|
|
Work Around
|
N/A
|
|
Evaluation
|
See description.
Posted Date : 2007-11-05 18:30:11.0
|
|
Comments
|
PLEASE NOTE: JDK6 is formerly known as Project Mustang
|
|
|
 |