6625997: CastPP, CheckCastPP and Proj nodes are not dead loop safe

EA and initialization optimizations could bypass these nodes.

Reviewed-by: rasbold, never